--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ channels:
   - conda-forge
 dependencies:
   - r-base=3.6
-  - r-tidyverse
   - r-shinydashboard
   - r-learnr
   - r-nycflights13
   - r-Lahman
+  - r-patchwork
